Update theme label from 'mea-theme' to 'MEA Theme' in package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "mea-theme",
+        "label": "MEA Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/mea-theme-color-theme.json"
       }
